crates/osp-core/tests/compile_fail/cP2_executable_predicate_set_literal.stderr
error[E0451]: field `predicate_set` of struct `ExecutablePredicateSet` is private
  --> tests/compile_fail/cP2_executable_predicate_set_literal.rs:11:9
   |
10 |     let _eps = ExecutablePredicateSet {
   |                ---------------------- in this type
11 |         predicate_set: PredicateSet {
   |         ^^^^^^^^^^^^^ private field
